[package]
name = "accounting"
version = "0.1.2"
edition = "2024"

[dependencies]
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "migrate", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.88"
chrono = "0.4.41"
jsonwebtoken = "9.3.1"
rust_decimal = "1.37.2"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
anyhow = "1.0.98"
argon2 = { version = "0.5.3", features = ["rand", "simple"] }
rand_core = { version = "0.6.4", features = ["std"] }
env_logger = "0.11.8"
axum = "0.8.4"
dotenvy = "0.15"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tower = "0.5.2"
